kubedefs/rmqdeploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vprormq
  labels:
    app: prormq
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prormq
  template:
    metadata:
      labels:
        app: prormq
    spec:
      containers:
      - name: prormq
        image: rabbitmq
        ports:
        - name: vprormq-port
          containerPort: 5672
