kubedefs/mcservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: vpromq01
spec:
    ports:
    - port: 5672
      targetPort: vprormq-port 
      protocol: TCP
    selector:
      app: vprormq
    type: ClusterIP
